<resources>
    <string name="app_name">爱你没差</string>
    <string name="key_again_exit">再按一次回退键退出程序</string>
    <string name="clock">时钟</string>
    <string name="alarm_clock">闹钟</string>
    <string name="timer">计时</string>
    <string name="remove_alarm">删除设定</string>
    <string name="history_of_today">历史上的今天</string>
    <string name="set_alarm">设定闹钟</string>
    <string name="add_time_plan_space">添加时间计划\t\t\t</string>
    <string name="add_time_plan">添加时间计划</string>
    <string name="check_time_plan">查看时间计划</string>
    <string name="add_memorial_day">添加纪念日</string>
    <string name="edit">编辑</string>
    <string name="tip_permission">该应用需要获取存储空间，为你存储个人信息；\n否则，您将无法正常使用该应用</string>
    <string name="tip_permission_title">存储权限不可用</string>
    <string name="open_permission">立即开启</string>
    <string name="cancel">取消</string>
    <string name="get_permission_success">获取权限成功！</string>
    <string name="tip_permission_again">请在-应用设置-权限-中，允许支付宝使用存储权限来保存用户数据</string>

    <!-- first fragment -->
    <string name="add_plan_title">添加事件的题目</string>
    <string name="add_plan_time">起始时间\n结束时间</string>
    <string name="add_plan_location">添加地点</string>
    <string name="add_plan_context">添加事件的内容</string>
    <string name="add_plan_fail">添加事件失败</string>
    <string name="get_information_error">获取信息错误</string>
    <string name="task">事件%d</string>

    <!-- 日期滚动选项栏 -->
    <string name="cancle">取消</string>
    <string name="time_choose_title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>

    <!-- 添加时间计划页面 -->
    <string name="add_plan_success">添加计划成功！</string>
    <string name="theme">主题</string>
    <string name="location">地点</string>
    <string name="all_day">全天</string>
    <string name="not_all_day">选择时段</string>
    <string name="start">开始</string>
    <string name="end">结束</string>
    <string name="context">填写相关的内容</string>
    <string name="reminder">提醒</string>
    <string name="more">更多</string>
    <string name="null_title">标题不能为空！</string>
    <string name="null_location">地点不能为空！</string>
    <string name="null_context">内容不能为空！</string>
    <string name="error_end_date">结束时间不合法！</string>
    <string name="word_limit">文字长度超过了限制！</string>

    <!-- expansion -->
    <string name="ADD">ADD</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
