<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="52dp"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/ll_bottom_util"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:alpha="30"
        android:background="@drawable/src_bottom"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/fl_page_clock"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_weight="1"
            android:background="@color/bottom_util_color_selected"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_page_clock"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/clock_open"
                tools:ignore="ContentDescription,KeyboardInaccessibleWidget" />

            <TextView
                android:id="@+id/tv_page_clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:text="@string/clock"
                android:textColor="@color/black" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_page_alarm_clock"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_page_alarm_clock"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/alarm_clock_close"
                tools:ignore="ContentDescription,KeyboardInaccessibleWidget" />

            <TextView
                android:id="@+id/tv_page_alarm_clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:text="@string/alarm_clock"
                android:textColor="@color/black" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_page_timer"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_page_timer"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/timer_close"
                tools:ignore="ContentDescription,KeyboardInaccessibleWidget" />

            <TextView
                android:id="@+id/tv_page_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:text="@string/timer"
                android:textColor="@color/black" />

        </FrameLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>